--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,19 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #chartWrap {
-    background: whitesmoke;
+	background: url(../img/back.jpg) no-repeat center top;
+	margin-top: -70px;
+	padding-top: 50px;
+	text-align:center;
+	background-attachment: relative;
+	background-position: center center;
+	min-height: 650px;
+	width: 100%;
+	height: auto%;
+}
+
+#skill {
+	color: grey;
 }
 
 #headerwrap h1 {
