--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,7 +130,7 @@ h1, h2, h3, h4, h5, h6 {
 	background-position: center center;
 	min-height: 650px;
 	width: 100%;
-	height: auto%;
+	height: auto;
 }
 
 #skill {
