--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,3 @@
-/*
- * Author: Carlos Alvarez
- * URL: http://Alvarez.is
- *
- * Project Name: NYC Design
- * Version: 1.0
- * Date: 04-20-2014
- * URL: 
- */
 
 
 /* ==========================================================================
@@ -221,7 +212,7 @@ h1, h2, h3, h4, h5, h6 {
 	background-position: center center;
 	min-height: 550px;
 	width: 100%;
-    height: 50%;
+    height: 30%;
 	
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
@@ -234,12 +225,19 @@ h1, h2, h3, h4, h5, h6 {
     background-size: cover;
 }
 
+.info {
+	background-color: whitesmoke;
+
+	height: 50%;
+	width: 50%;
+}
+
 #me {
-    width: 100%;
+    width: 35%;
     height: auto;
     display: block;
     margin: auto;
-
+	float: left;
 
 }
 
